--- a/pintos/src/Makefile.build
+++ b/pintos/src/Makefile.build
@@ -2,7 +2,7 @@
 
 SRCDIR = ../..
 
-all: kernel.bin loader.bin runscript
+all: kernel.bin loader.bin
 
 include ../../Make.config
 include ../Make.vars
@@ -76,24 +76,11 @@ SOURCES = $(foreach dir,$(KERNEL_SUBDIRS),$($(dir)_SRC))
 OBJECTS = $(patsubst %.c,%.o,$(patsubst %.S,%.o,$(SOURCES)))
 DEPENDS = $(patsubst %.o,%.d,$(OBJECTS))
 
-GDBPORT := $(shell expr `id -u` % 5000 + 25000)
-IMAGE = kernel.img
-QEMUOPTS = -serial mon:stdio -gdb tcp::$(GDBPORT)
-QEMUOPTS += $(shell if $(QEMU) -nographic -help | grep -q '^-D '; then echo '-D qemu.log'; fi)
-
-%.o: %.c
-	$(CC) -c $< -o $@ $(CFLAGS) $(CPPFLAGS) $(WARNINGS) $(DEFINES) $(DEPS)
-
-%.o: %.S
-	$(CC) -c $< -o $@ $(ASFLAGS) $(CPPFLAGS) $(DEFINES) $(DEPS)
-
 threads/kernel.lds.s: CPPFLAGS += -P
 threads/kernel.lds.s: threads/kernel.lds.S threads/loader.h
 
 kernel.o: threads/kernel.lds.s $(OBJECTS) 
-	$(LD) $(LDOPTIONS) -T $< -o $@ $(OBJECTS)
-	$(OBJDUMP) -S $@ > kernel.asm
-	$(NM) -n $@ > kernel.sym
+	$(LD) -T $< -o $@ $(OBJECTS)
 
 kernel.bin: kernel.o
 	$(OBJCOPY) -R .note -R .comment -S $< $@
@@ -102,30 +89,10 @@ threads/loader.o: threads/loader.S
 	$(CC) -c $< -o $@ $(ASFLAGS) $(CPPFLAGS) $(DEFINES)
 
 loader.bin: threads/loader.o
-	$(LD) $(LDOPTIONS) -N -e 0 -Ttext 0x7c00 -o loader.out $<
-	$(OBJDUMP) -S loader.out > loader.asm
-	$(OBJCOPY) -S -O binary -j .text loader.out $@
-	rm loader.out
+	$(LD) -N -e 0 -Ttext 0x7c00 --oformat binary -o $@ $<
 
 os.dsk: kernel.bin
 	cat $^ > $@
-
-kernel.img: kernel.bin loader.bin
-	rm -f $@
-	$(PINTOS) --make-disk=$@ --kernel=kernel.bin --loader=loader.bin
-
-qemu: $(IMAGE)
-	$(QEMU) -drive file=$(IMAGE),index=0,media=disk,format=raw $(QEMUOPTS)
-
-qemu-nox: $(IMAGE)
-	@echo "***"
-	@echo "*** Use Ctrl-a x to exit qemu. If you are under GNU Screen or Tmux and "
-	@echo "*** its prefix key is Ctrl-a, press Ctrl-a twice and x to exit."
-	@echo "***"
-	$(QEMU) -nographic -drive file=$(IMAGE),index=0,media=disk,format=raw $(QEMUOPTS)
-
-runscript:
-	cp ../../pintos.sh ./pintos.sh
 
 clean::
 	rm -f $(OBJECTS) $(DEPENDS) 
@@ -133,7 +100,6 @@ clean::
 	rm -f kernel.bin.tmp
 	rm -f kernel.o kernel.lds.s
 	rm -f kernel.bin loader.bin
-	rm -f loader.asm kernel.asm kernel.sym
 	rm -f bochsout.txt bochsrc.txt
 	rm -f results grade
 
@@ -141,5 +107,3 @@ Makefile: $(SRCDIR)/Makefile.build
 	cp $< $@
 
 -include $(DEPENDS)
-
-.PHONY: all clean qemu image
